# tolerant-parser

./: .gitignore  Cargo.toml  README.md
.github/actions/setup-env/: action.yaml
.github/workflows/: build-wasi.yml  test-sdk.yml
crates/cmd/gen_transtion_table/: Cargo.toml
crates/cmd/gen_transtion_table/src/: configs.rs  export_support.rs  generate_parse_rule.rs  generator_scan_rule.rs  generator_symbol_set.rs  lib.rs  main.rs  storage_support.rs  translation_table.rs
crates/cmd/parse_event_viewer/: Cargo.toml
crates/cmd/parse_event_viewer/src/: commands.rs  config.rs  main.rs  runtime.rs
crates/cmd/parse_event_viewer/wit/: app.wit  deps.toml
crates/cmd/print_event_viewer/: Cargo.toml
crates/cmd/print_event_viewer/src/: main.rs
crates/cmd/syntax_tree_viewer/: Cargo.toml
crates/cmd/syntax_tree_viewer/src/: config.rs  lib.rs  main.rs
crates/core/engine-core/: Cargo.toml
crates/core/grammar-types-core/: Cargo.toml
crates/core/parser-core/: Cargo.toml
crates/core/parser-core/src/: capture.rs  dispatcher.rs  error_recovery.rs  event_dispatcher.rs  incremental.rs  lib.rs  metadata.rs  node_handler.rs  paralell.rs  parser.rs  state_stack.rs  syntax_tree.rs
crates/core/parser-core/src/error_recovery/: delete_recovery.rs  shift_recovery.rs  stitch_handler.rs
crates/core/parser-core/src/incremental/: edit_hint.rs  support.rs
crates/core/parser-core/src/support/: test_support.rs
crates/core/parser-core/src/syntax_tree/: node.rs  syntax_batch.rs  token.rs  tree.rs
crates/core/scanner-core/: Cargo.toml
crates/sdk/parser-wasi/: Cargo.toml
crates/sqlite-wasi/sqlite-engine-wasi/: Cargo.toml
crates/sqlite-wasi/sqlite-engine-wasi/src/: bindings.rs  lib.rs
crates/sqlite-wasi/sqlite-event-capture/: Cargo.toml
crates/sqlite-wasi/sqlite-parser-playground/: package.json  pnpm-lock.yaml
crates/sqlite-wasi/sqlite-parser-wasi/: Cargo.toml
crates/sqlite-wasi/sqlite-parser-wasi/src/: bindings.rs
crates/sqlite/sqlite-engine/: Cargo.toml  build.rs
crates/sqlite/sqlite-engine/src/: lib.rs
crates/sqlite/sqlite-engine/src/_generated/: scan_rule.rs  symbol_set.rs
crates/sqlite/sqlite-engine/tests/: node_handler_tests.rs  parse_dispatcher_tests.rs  parse_recovery_tests.rs  parser_tests.rs  scan_dispatcher_tests.rs  scanner_tests.rs  test_support.rs
crates/sqlite/sqlite-engine/tests/fixtures/parse_tests/: test_const_select.json  test_const_select.txt  test_incomplete_statement.json  test_meny_select_statements.json  test_star_select.json
crates/sqlite/sqlite-engine/tests/fixtures/parse_tests/full_parse_tests/: test_const_select.json  test_parse_with_incorrect_literal.json  test_parse_with_incorrect_literal_2.json  test_parse_with_surrogate_pair_literal.json
crates/sqlite/sqlite-engine/tests/fixtures/parse_tests/multi_cursor_tests/: test_drap_and_move_word.json  test_drop_word.json  test_insert_word.json  test_no_edit.json  test_replace_word.json
crates/sqlite/sqlite-engine/tests/fixtures/parse_tests/parser_tests_members/: test_parse_append_statment.json  test_parse_broken_keyword_by_inserting.json  test_parse_broken_keyword_by_inserting_first.json  test_parse_broken_keyword_by_removing_first.json  test_parse_incorrect_identifier_removing_word.json  test_parse_insert_changining_full.json  test_parse_insert_from_empty.json  test_parse_prepend_statment.json  test_parse_remove_all.json  test_parse_single_statement_with_deleting.json  test_parse_single_with_cross_over_2_statements.json  test_parse_split_statement_on_inserting_semicolon.json  test_parse_statement_by_appending_leading_trivia.json  test_parse_statement_by_dropping_first_statement_without_leading_trivia.json  test_parse_statement_by_dropping_first_statement_without_trailing_trivia.json  test_parse_statement_by_dropping_last_statement.json  test_parse_statement_by_dropping_last_statement_without_leading_trivia.json  test_parse_statement_by_dropping_last_statement_without_trailing_trivia.json  test_parse_statement_by_dropping_middle_statement.json  test_parse_statement_by_dropping_middle_statement_without_leading_trivia.json  test_parse_statement_by_dropping_middle_statement_without_trailing_trivia.json  test_parse_statement_by_dropping_semicolon.json  test_parse_statement_by_editing_latter.json  test_parse_statement_by_filling_value.json  test_parse_statement_by_replacing_all.json  test_parse_statement_following_incorrent_statement.json  test_parse_statement_with_semicolon_after_newline.json  test_parse_with_maltibyte_char.json
crates/sqlite/sqlite-engine/tests/parser_tests/: node_handler_tests.rs  parse_recovery_tests.rs
crates/sqlite/sqlite-engine/tests/parser_tests_members/: full_parse_tests.rs  incrementa_parse_tests.rs  incremental_parse_multi_cursor_tests.rs  incremental_parse_support_tests.rs  incremental_parse_tests.rs  node_handler_tests.rs  parse_dispatcher_tests.rs  parse_recovery_tests.rs  syntax_tree_tests.rs
crates/sqlite/sqlite-engine/tests/scanner_tests_members/: prefetch_tests.rs  scan_dispatcher_tests.rs
crates/sqlite/sqlite-engine/tests/supports/: test_support.rs
crates/support/print-batch-pipeline/: Cargo.toml
crates/support/print-batch-pipeline/src/: lib.rs
crates/support/print-batch-pipeline/tests/: pipeline_tests.rs
crates/support/print-batch-pipeline/tests/fixtures/pipeline_tests/: test_multi_fragment_by_inserting.json  test_single_fragment_by_inserting.json
crates/support/print-batch-pipeline/tests/support/: test_support.rs
crates/tool/build-support/: Cargo.toml
crates/tool/extract_lemon_grammar/: Cargo.toml  build.rs
crates/tool/extract_lemon_grammar/src/: lemon.rs  lib.rs  main.rs
crates/tool/extract_lemon_grammar/src/assets/: scan_rules.json
crates/tool/extract_lemon_grammar/src/lemon/: interop.rs  keyword_check.rs  lemon_bindings.rs
interfaces/: parser.wit
interfaces/event-capture/: deps.toml  world.wit
src/: lib.rs
src/core/engine_core/: parser_engine.rs  scanner_engine.rs
src/core/parser_core/: capture.rs  error_recovery.rs  event_dispatcher.rs  incremental.rs  metadata.rs  mod.rs  node_handler.rs  (+4 more)
src/support/: test_support.rs
(+53 files in other folders)
