[workspace]
members = [
    "crates/sdk/*", 
    "crates/core/*", 
    "crates/cmd/*", 
    "crates/tool/*", 
    "crates/sqlite/*", 
    "crates/sqlite-wasi/*", 
]
exclude = [
    "crates/sdk/scan-type-wasi", "crates/sqlite-wasi/sqlite-engine-wasi", 
    "crates/sdk/engine-wasi", 
    "crates/sqlite-wasi/sqlite-parser-playground"
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.37", features = ["derive"] }
wit-bindgen = "0.42"
