[package]
name = "tolerant-parser-sdk"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/sdk/*", 
    "crates/core/*", 
    "crates/cmd/*", 
    "crates/tool/*", 
    "crates/sqlite/*", 
    "crates/sqlite-wasi/*", 
]
exclude = [
    "crates/sdk/scan-type-wasi", "crates/sqlite-wasi/sqlite-engine-wasi", 
    "crates/sdk/engine-wasi", 
    "crates/sqlite-wasi/sqlite-parser-playground",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.37", features = ["derive"] }
wit-bindgen = "0.42"
derive_builder = "0.20.2"
regex = "1.11.1"
cactus = "1.0.7"
rowan = "0.16.1"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
regex = { workspace = true }
cactus = { workspace = true }
rowan = { workspace = true }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
anyhow = { workspace = true }

[features]
test_support = []
parallel-parse = ["rayon"]