[package]
name = "tolerant-parser-sdk"
version = "0.3.2"
edition = "2024"

[workspace]
members = [
    "crates/cmd/*", 
    "crates/tool/*", 
    "crates/sqlite/*", 
    "crates/sqlite-wasi/*", 
]
exclude = [
    "crates/sqlite-wasi/sqlite-engine-wasi", 
    "crates/sdk/engine-wasi", "crates/sqlite-wasi/parser-app"
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.37", features = ["derive"] }
wit-bindgen = "0.42"
derive_builder = "0.20.2"
regex = "1.11.1"
cactus = "1.0.7"
rowan = "0.16.1"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
regex = { workspace = true }
cactus = { workspace = true }
rowan = { workspace = true }
rayon = { version = "1.10.0", optional = true }
wit-bindgen = { version = "0.42", optional = true }

[dev-dependencies]
anyhow = { workspace = true }

[features]
test_support = []
parallel-parse = ["rayon"]
wasi = ["wit-bindgen"]

[profile.release]
lto = true

[profile.release.package."sqlite-parser-wasi"]
opt-level = "z"
codegen-units = 1
