[package]
name = "gen_transtion_table"
version = "0.1.0"
edition = "2024"

[dependencies]
tolerant-parser-sdk = { path = "../../.." }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.19.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
lalry = "0.1.0"