[package]
name = "parse_event_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
tolerant-parser-sdk = { path = "../../.." }
parser-core = { path = "../../core/parser-core" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ansi_term = "0.12.1"
sqlite-engine = { path = "../../sqlite/sqlite-engine" }
