[package]
name = "print_event_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
engine-core = { path = "../../core/engine-core" }
scanner-core = { path = "../../core/scanner-core" }
parser-core = { path = "../../core/parser-core" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ansi_term = "0.12.1"
sqlite-engine = { path = "../../sqlite/sqlite-engine" }
