[package]
name = "syntax_tree_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
engine-core = { path = "../../core/engine-core" }
parser-core = { path = "../../core/parser-core" }
anyhow = { workspace = true }
clap = { workspace = true }
ansi_term = "0.12.1"
sqlite-engine = { path = "../../sqlite/sqlite-engine" }
