[package]
name = "syntax_tree_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
tolerant-parser-sdk = { path = "../../.." }
parser-core = { path = "../../core/parser-core", features = ["parallel-parse"] }
anyhow = { workspace = true }
clap = { workspace = true }
ansi_term = "0.12.1"
sqlite-engine = { path = "../../sqlite/sqlite-engine" }
