[package]
name = "sqlite-parser-wasi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
parser-wasi = { path = "../../sdk/parser-wasi" }
sqlite-engine = { path = "../../sqlite/sqlite-engine" }
parser-core = { path = "../../core/parser-core" }
engine-core = { path = "../../core/engine-core" }