[package]
name = "sqlite-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tolerant-parser-sdk = { path = "../../.." }
phf = { version = "0.11.3", features = ["macros"] }

[dev-dependencies]
parser-core = { path = "../../core/parser-core", features = ["test_support"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
