[package]
name = "print-batch-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
engine-core = { path = "../../core/engine-core" }
parser-core = { path = "../../core/parser-core" }

[dev-dependencies]
sqlite-engine = { path = "../../sqlite/sqlite-engine" }
parser-core = { path = "../../core/parser-core", features = ["test_support"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
