[package]
name = "extract_lemon_grammar"
version = "0.1.0"
edition = "2024"

[dependencies]
tolerant-parser-sdk = { path = "../../.." }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
build_support = { path = "../build-support" }
anyhow = { workspace = true }
